<?xml version="1.0" encoding="utf-8"?>
<!--коммент!-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent" android:layout_gravity="center">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_xml_title"
                android:id="@+id/tvTitle"
                android:textSize="20dp" android:textStyle="bold"
                android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>
        <TextView
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:textSize="19dp"
                android:text="@string/main_xml_from"
                android:id="@+id/tvFrom"
                android:layout_alignLeft="@id/tvTitle"
                android:layout_alignParentTop="true"
                android:layout_marginTop="55dp"/>
        <TextView
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:textSize="19dp"
                android:text="@string/main_xml_to"
                android:id="@+id/tvTo"
                android:layout_alignLeft="@id/tvTitle"
                android:layout_alignParentTop="true"
                android:layout_marginTop="97dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_xml_cost"
                android:textStyle="bold"
                android:id="@+id/tvCost"
                android:layout_alignLeft="@id/tvTitle"
                android:textSize="18dp" android:layout_alignParentTop="true"
                android:layout_marginTop="197dp"/>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="159dp"
                android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true" android:layout_marginTop="125dp">
            <Button android:layout_width="255dp" android:layout_weight="1" android:layout_height="wrap_content"
                    android:id="@+id/btnTime" android:textSize="19dp"
                    android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"/>
            <Button android:layout_width="255dp" android:layout_height="wrap_content" android:text="@string/main_xml_to_order"
                    android:id="@+id/btnToOrder" android:enabled="false" android:textSize="19dp"
                    android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>