<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_xml_from"
            android:id="@+id/etFrom"
            android:layout_margin="10dp" android:textSize="20dp"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_xml_to"
            android:id="@+id/etTo" android:layout_margin="10dp" android:textSize="20dp"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Время отправки"
            android:id="@+id/etTime" android:layout_margin="10dp" android:textSize="18dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_xml_cost"
            android:id="@+id/tvCost" android:layout_margin="10dp" android:textSize="20dp"/>
    <!--Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_xml_to_order"
            android:id="@+id/btnToOrder" android:layout_margin="10dp" android:textSize="18dp"
            android:enabled="false"/-->
</LinearLayout>
