<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    <TabHost
            android:id="@android:id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </TabWidget>
            <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:id="@+id/tvHistory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ListView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lvHistory"/>
                </LinearLayout>
                <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/llBooking">
                    <LinearLayout

                            android:id="@+id/tab1"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent" android:orientation="vertical">


                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_xml_title"
                                android:id="@+id/textView" android:textSize="18dp" android:textStyle="bold"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="10dp"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_xml_from"
                                android:id="@+id/tvFrom"
                                android:layout_margin="10dp" android:textSize="20dp"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_xml_to"
                                android:id="@+id/tvTo" android:layout_margin="10dp" android:textSize="20dp"/>
                        <Button
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="Время отправки"
                                android:id="@+id/btnTime" android:layout_margin="10dp" android:textSize="18dp"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_xml_cost"
                                android:id="@+id/tvCost" android:layout_margin="10dp" android:textSize="20dp"/>
                        <Button
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/main_xml_to_order"
                                android:id="@+id/btnToOrder" android:layout_margin="10dp" android:textSize="18dp"
                                android:enabled="false"/>

                    </LinearLayout>
                </ScrollView>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>
